--- a/index.html
+++ b/index.html
@@ -361,6 +361,10 @@ window.setHarmonic=t=>{
 };
 
 renderLoop();
+
+  if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("./service-worker.js");
+}
 </script>
 </body>
 </html>
