Clean up index.html by removing extra whitespace
Removed unnecessary whitespace and closing tags.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Atelier — Viewfinder for Artists</title>
-
+<link rel="manifest" href="manifest.json">
 <style>
 :root{
   --bg:#0b0c0e;
@@ -368,7 +368,4 @@ renderLoop();
 </script>
 </body>
 </html>
-    
-  </body>
-  
-</html>
+
