Update ✔this one latest 3 change trial.html

--- a/✔this one latest 3 change trial.html
+++ b/✔this one latest 3 change trial.html
@@ -407,7 +407,7 @@ function drawGrid(type, c = ctx){
     diagonals:[[0,0,w,h],[w,0,0,h]],
     baroque:[[0,h,w,0]],
     golden:[[w*0.618,0,w*0.618,h],[0,h*0.618,w,h*0.618]],
-    // dynamic:[[0,0,w,h],[0,h/2,w/2,0]],
+    // disabled to check correct dynamic:[[0,0,w,h],[0,h/2,w/2,0]],
     dynamic: [
   // main diagonals
   [0, 0, w, h],
