--- a/✔this one latest 3 change trial.html
+++ b/✔this one latest 3 change trial.html
@@ -399,6 +399,34 @@ function drawGrid(type, c = ctx){
     ? 'rgba(0,0,0,0.35)'  
     : 'rgba(255,255,255,0.35)';
   c.lineWidth = 1.4;
+if(type === 'spiral'){
+  const w = canvas.width;
+  const h = canvas.height;
+  const phi = (1 + Math.sqrt(5)) / 2;
+
+  let x = 0, y = 0, cw = w, ch = h;
+  c.strokeStyle = importedImage ? 'rgba(0,0,0,0.35)' : 'rgba(255,255,255,0.35)';
+  c.lineWidth = 1.6;
+
+  for(let i = 0; i < 5; i++){
+    c.beginPath();
+    c.arc(
+      x + cw, y + ch,
+      Math.min(cw, ch),
+      Math.PI,
+      Math.PI * 1.5
+    );
+    c.stroke();
+
+    const nw = cw / phi;
+    const nh = ch / phi;
+    x += cw - nw;
+    y += ch - nh;
+    cw = nw;
+    ch = nh;
+  }
+  return;
+}
 
   const sets = {
     center:[[w/2,0,w/2,h],[0,h/2,w,h/2]],
@@ -408,6 +436,35 @@ function drawGrid(type, c = ctx){
     baroque:[[0,h,w,0]],
     golden:[[w*0.618,0,w*0.618,h],[0,h*0.618,w,h*0.618]],
     // disabled to check correct dynamic:[[0,0,w,h],[0,h/2,w/2,0]],
+    dynamicdynamic dunno right: (() => {
+  const phi = (1 + Math.sqrt(5)) / 2;
+
+  const x1 = w / phi;        // ≈ 0.618w
+  const x2 = w - x1;         // ≈ 0.382w
+  const y1 = h / phi;        // ≈ 0.618h
+  const y2 = h - y1;         // ≈ 0.382h
+
+  return [
+    // Main diagonals
+    [0, 0, w, h],
+    [0, h, w, 0],
+
+    // Reciprocal diagonals
+    [0, h, x1, 0],
+    [w, h, x2, 0],
+    [0, 0, x1, h],
+    [w, 0, x2, h],
+
+    // Vertical divisions
+    [x1, 0, x1, h],
+    [x2, 0, x2, h],
+
+    // Horizontal divisions
+    [0, y2, w, y2],
+    [0, y1, w, y1],
+  ];
+})(),
+
     dynamic: [
   // main diagonals
   [0, 0, w, h],
@@ -509,7 +566,10 @@ gridTool.onclick = () => {
     <div class='option' onclick="setGrid('baroque')">Baroque Diagonal</div>
     <div class='option' onclick="setGrid('golden')">Golden Section</div>
     <div class='option' onclick="setGrid('dynamic')">Dynamic Armature</div>
+    <div class='option' onclick="setGrid('dynamic dunno right')">Dynamic Armature</div>
     <div class='option' onclick="setGrid('modular8')">Modular 8×8</div>
+    <div class='option' onclick="setGrid('spiral')">Golden Spiral</div>
+
   `;
   panel.style.display = 'block';
   openPanel = 'grid';
