--- a/✔this one latest 3 change trial.html
+++ b/✔this one latest 3 change trial.html
@@ -400,33 +400,37 @@ function drawGrid(type, c = ctx){
     : 'rgba(255,255,255,0.35)';
   c.lineWidth = 1.4;
 if(type === 'spiral'){
-  const w = canvas.width;
-  const h = canvas.height;
   const phi = (1 + Math.sqrt(5)) / 2;
+  let x = 0, y = 0;
+  let w0 = w, h0 = h;
 
-  let x = 0, y = 0, cw = w, ch = h;
   c.strokeStyle = importedImage ? 'rgba(0,0,0,0.35)' : 'rgba(255,255,255,0.35)';
   c.lineWidth = 1.6;
 
-  for(let i = 0; i < 5; i++){
+  for(let i = 0; i < 6; i++){
     c.beginPath();
-    c.arc(
-      x + cw, y + ch,
-      Math.min(cw, ch),
-      Math.PI,
-      Math.PI * 1.5
-    );
-    c.stroke();
 
-    const nw = cw / phi;
-    const nh = ch / phi;
-    x += cw - nw;
-    y += ch - nh;
-    cw = nw;
-    ch = nh;
+    if(i % 4 === 0){
+      c.arc(x + w0, y + h0, Math.min(w0, h0), Math.PI, Math.PI * 1.5);
+      w0 /= phi;
+    } else if(i % 4 === 1){
+      c.arc(x + w0, y, Math.min(w0, h0), Math.PI * 1.5, Math.PI * 2);
+      h0 /= phi;
+    } else if(i % 4 === 2){
+      c.arc(x, y, Math.min(w0, h0), 0, Math.PI * 0.5);
+      w0 /= phi;
+      x += w0;
+    } else {
+      c.arc(x, y + h0, Math.min(w0, h0), Math.PI * 0.5, Math.PI);
+      h0 /= phi;
+      y += h0;
+    }
+
+    c.stroke();
   }
   return;
 }
+
 
   const sets = {
     center:[[w/2,0,w/2,h],[0,h/2,w,h/2]],
